WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168261
Call WKDestroyRenderingResources() on iOS when tabs are backgrounded
https://bugs.webkit.org/show_bug.cgi?id=168261
Summary
Call WKDestroyRenderingResources() on iOS when tabs are backgrounded
Simon Fraser (smfr)
Reported
2017-02-13 15:46:14 PST
Call WKDestroyRenderingResources() on iOS when tabs are backgrounded
Attachments
Patch
(3.08 KB, patch)
2017-02-13 15:48 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(7.11 KB, patch)
2017-02-13 16:14 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-02-13 15:48:18 PST
Created
attachment 301404
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-02-13 15:48:48 PST
rdar://problem/30481079
Simon Fraser (smfr)
Comment 3
2017-02-13 16:14:13 PST
Created
attachment 301410
[details]
Patch
Tim Horton
Comment 4
2017-02-13 16:15:59 PST
Comment on
attachment 301404
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=301404&action=review
> Source/WebKit2/ChangeLog:9 > + There's code to call WKDestroyRenderingResources() on a 10s timer that exists for Mac, but on iOS
Please unWKSI this.
> Source/WebKit2/WebProcess/cocoa/WebProcessCocoa.mm:446 > + RELEASE_LOG(ProcessSuspension, "%p - WebProcess::destroyRenderingResources() took %.2fms", this, (endTime - startTime) * 1000.0);
Would be neat if we had a thing for this.
WebKit Commit Bot
Comment 5
2017-02-13 16:16:19 PST
Attachment 301410
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/cocoa/TextTrackRepresentationCocoa.mm:35: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 6
2017-02-13 16:49:20 PST
Comment on
attachment 301410
[details]
Patch Clearing flags on attachment: 301410 Committed
r212260
: <
http://trac.webkit.org/changeset/212260
>
WebKit Commit Bot
Comment 7
2017-02-13 16:49:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug