Source/WebCore/platform/spi/cocoa/QuartzCoreSPI.h
@@ -28,6 +28,7 @@
 
 #if USE(APPLE_INTERNAL_SDK)
 
+#include <QuartzCore/CABackingStore.h>
 #include <QuartzCore/CAColorMatrix.h>
 #include <QuartzCore/CARenderServer.h>
 
@@ -192,6 +193,8 @@ CAMachPortRef CAMachPortCreate(mach_port_t);
 mach_port_t CAMachPortGetPort(CAMachPortRef);
 CFTypeID CAMachPortGetTypeID(void);
 
+void CABackingStoreCollectBlocking(void);
+
 WTF_EXTERN_C_END
 
 extern NSString * const kCATiledLayerRemoveImmediately;
@@ -235,4 +238,5 @@ extern NSString * const kCAContentsFormatRGBA10XR;
 
 @protocol CAAnimationDelegate <NSObject>
 @end
-#endif
+
+#endif // USE(APPLE_INTERNAL_SDK)
